--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             </div> -->
 
             <div class="password-generator">
-                <h2 class="password-generator-heading">Password Generator</h2>
+                <h2 class="password-generator-heading">
+                    Random Password Generator
+                </h2>
                 <div class="password-output">
                     <p class="password-display">
                         Password: <span class="password-value"></span>
